src/api/snapshots/tidx__api__views__tests__cte_swap.snap
---
source: src/api/views.rs
assertion_line: 611
expression: sql
---
WITH Swap AS (
    SELECT block_num, block_timestamp, log_idx, tx_idx, 
           concat('0x', lower(substring(tx_hash, 3))) AS tx_hash,
           concat('0x', lower(substring(address, 3))) AS address, selector, topic1, topic2, topic3, data, abi_address(topic1) AS "sender", abi_uint(abi_word(data, 0)) AS "amount0In", abi_uint(abi_word(data, 32)) AS "amount1In", abi_uint(abi_word(data, 64)) AS "amount0Out", abi_uint(abi_word(data, 96)) AS "amount1Out", abi_address(topic2) AS "to"
    FROM logs
    WHERE selector = '0xd78ad95fa46c994b6551d0da85fc275fe613ce37657fb8d5e3d130840159d822'
) SELECT address, "sender", "amount0In" FROM Swap LIMIT 10
